fix transformer's graphs (change in/out/losses nodes, align all edges, fix arrows)

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -329,13 +329,14 @@ a.active-tab-color:focus {
   margin: auto;
   width: 600px;
   height: 400px;
+  border: 1px solid #F5F5F5;
 }
 
 #nodesNetwork {
   margin: auto;
   width: 80%;
   height: 500px;
-  border: 1px solid #fff;
+  border: 1px solid #F5F5F5;
   margin-top: 80px;
 }
 
@@ -343,7 +344,7 @@ a.active-tab-color:focus {
   margin: auto;
   width: 100%;
   height: 800px;
-  border: 1px solid #fff;
+  border: 1px solid #F5F5F5;
   margin-top: 80px;
 }
 
